--- a/bootstrap-additions.css
+++ b/bootstrap-additions.css
@@ -1,10 +1,3 @@
-.container {
-	border: 3px solid red;
-}
-
-.row {
-	border: 3px solid green;
-}
 
 .col {
 	border: 3px solid black;
@@ -26,11 +19,98 @@
 	border: 3px solid orange;
 }
 
-row justify-content-md-center
 
-.col-sm-4 {
-	text-align: right;
-	border: 3px solid black;
+.header {
+	padding: 0px 0px 0px 0px;
 }
 
-.project
+ul {
+	padding-left: 0px
+}
+
+ul li {
+	display: inline;
+}
+
+nav {
+	margin-top: 27px;
+	margin-left: 0px;
+}
+
+nav, p, footer, form, a {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777777;
+}
+
+h2, h3 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
+	border-style: solid;
+	border-width: 0px 0px 1.5px 0px;
+	border-color: #beb8b4;
+}
+
+body {
+	background: url(images/concrete_seamless.png);
+}
+
+#footer {
+	width: 100%;
+	background-color: yellow;
+	text-align: center;
+	background-color: #666666;
+	padding: 20px;
+	border-color: #4aaaa5;
+	border-style: solid;
+	border-width: 8px 0px 0px 0px;
+}
+
+h1 {
+	background-color: #4aaaa5;
+	color: white;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	margin: 0;
+	padding: 15px;
+}
+
+.maincontent {
+	background: white;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	border: 1.5px solid #beb8b4;
+}
+
+.bio-picture {
+	padding: 0;
+	margin-bottom: 15px;
+}
+
+.connect {
+	padding-bottom: 15px;
+}
+
+.navbutton {
+	padding: 0px 7px;
+	border-width: 0px 1.5px 0px 0px;
+	border-style: solid;
+	border-color: #beb8b4;
+}
+
+.lastbutton {
+	padding: 0px 7px;
+}
+
+#input {
+	padding: 5px 0px;
+}
+
+#messagebox {
+	margin-bottom: 15px;
+}
+
+.submitbutton {
+	border: none;
+	color: white;
+	background-color: #4aaaa5;
+	margin-bottom: 15px;
+}
